crates/ignis_driver/tests/snapshots/e2e_ok__record_literal_inside_multi_segment_namespace.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 34
stdout: (empty)
stderr: (empty)
