crates/ignis_driver/tests/snapshots/e2e_ok__record_literal_resolves_past_a_constant_of_the_same_name.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 133
stdout: (empty)
stderr: (empty)
