crates/ignis_driver/tests/snapshots/e2e_ok__result_combinators_move_owning_payload_once.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: alpha
alpha-mapped
boom
boom-handled
stderr: (empty)
