crates/ignis_driver/tests/snapshots/e2e_ok__static_mut_field_borrow.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: done
stderr: (empty)
