crates/ignis_driver/tests/snapshots/e2e_ok__str_slice_behaves_like_regular_slice.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 98
stdout: (empty)
stderr: (empty)
