crates/ignis_driver/tests/snapshots/e2e_ok__string_literal_non_ascii_escapes.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: • Summary
é1
añejo 42
stderr: (empty)
