crates/ignis_driver/tests/snapshots/e2e_ok__template_literal_calls_record_to_string.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: point=(1, 2)
stderr: (empty)
