crates/ignis_driver/tests/snapshots/e2e_ok__template_literal_does_not_move_interpolated_string.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 0
stdout: first=kept field 2
second=kept field 2
kept
stderr: (empty)
